--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Gerenciador de Atalhos para múltiplos IPs",
   "main": "script.js",
-  "scripts": {
-    "start:frontend": "live-server --port=3000",
-    "start:backend": "node start-backend.js",
-    "start": "concurrently \"npm:start:frontend\" \"npm:start:backend\""
-  },
+"scripts": {
+  "start": "concurrently \"npm:start:frontend\" \"npm:start:backend\"",
+  "start:frontend": "live-server --ignore=node_modules",
+  "start:backend": "python app.py"
+},
   "keywords": ["ssh", "automation", "management"],
   "author": "",
   "license": "ISC",
